# setup.py configuration file
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pipe_leak

[options]
packages = pipe_leak
zip_safe = False
include_package_data = True

install_requires =
    flask
    gunicorn
    feedparser
    feedgen
    jsonpath-ng
